# egghunt-event

./: .gitignore  Dockerfile  README.md  backend.py  db.py  docker-compose.yml  pyproject.toml  rate_limiter.py  requirements.txt  rollup.config.js  ruff.toml  server.py  test.py
.github/: dependabot.yml
conf/: nginx.conf
src/: index.html
src/assets/css/: style.css
src/assets/favicon/: site.webmanifest
src/assets/js/: auth.js  egg_viewer.js  leaderboard.js  my_eggs.js  preview.js  rules_timer.js  script.js
src/create-egg/: index.html
src/leaderboard/: index.html
src/my-eggs/: index.html
src/rules/: index.html
