[project]
name = "egghunt-event"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.9",
    "flask>=3.1.3",
    "flask-oauth>=0.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "waitress>=3.0.2",
]
